# rust-experiments

./: LICENSE  README.md
borrows/: Cargo.toml
borrows/src/: main.rs
channels/: Cargo.toml  Dockerfile  README.md
channels-nightly/: Cargo.toml
channels-nightly/src/: main.rs
channels/src/: main.rs
clibfromrust/: Cargo.toml  build.rs
clibfromrust/libbadmath/: badmath.c
clibfromrust/src/: main.rs
csv-experiment/: Cargo.toml  README.md
csv-experiment/src/: main.rs
heavy-ws/: Cargo.toml
heavy-ws/client/: index.js
heavy-ws/src/: main.rs
ipc-test/: Cargo.toml
ipc-test/src/: main.rs
loop-test/: Cargo.toml
loop-test/src/: main.rs
modbus-test-container/server/: Cargo.toml
modbus-test-container2/: README.md
modbus-test-container2/python-client/: Dockerfile  asyncio-server.py  client.py  requiremetns.txt
modbus-test-container2/server/: Cargo.toml
modbus-test-container2/server/src/: main.rs
modbus-test-container3/server/: Cargo.toml
modbus-test1/: Cargo.toml
modbus-test1/python-client/: modbus-gateway.py
modbus-test1/src/: main.rs
modbus-test2/: Cargo.toml  README.md
modbus-test2/python-client/: client.py  modbus-gateway.py
modbus-test2/src/: main.rs
neat-api/: Cargo.toml  README.md
rustdoc-experiments/: Cargo.toml  README.md
serde/: Cargo.toml  README.md
simulation/: Cargo.toml  out.csv
tcp-reading/: Cargo.toml
tcp-serde-protocol/: Cargo.toml  README.md
tcp-unix-listener/: Cargo.toml  README.md
three-tasks/: Cargo.toml
unix-async/: Cargo.toml
warp-ws-example/: Cargo.toml  README.md
wtf-async/: Cargo.toml
(+16 files in other folders)
