[package]
name = "channels"
version = "0.1.0"
authors = ["Jon-Martin Storm <jonmartin.storm@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
tokio = { version = "1", features = ["full"] }

[dependencies]
tokio = { version = "1", features = ["rt", "sync", "time"] }

[profile.release]
lto = true
# and also strip the binary? 
# https://lifthrasiir.github.io/rustlog/why-is-a-rust-executable-large.html#takeaway