[package]
name = "heavy-ws"
version = "0.1.0"
authors = ["Jon-Martin Storm <jonmartin.storm@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-tungstenite = "0.13.0"
tungstenite = "*"
tokio = { version = "1", features = ["full"] }
futures-channel = "*"
futures-util = "*"
futures = "*"
log = "*"
env_logger = "*"